<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/loaderTitleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="45dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/loading"
        android:textColor="@color/app_white"
        android:textSize="@dimen/default_16sp"
        app:layout_constraintEnd_toStartOf="@+id/loaderProgressTv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loaderProgressTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="end"
        android:text="@string/percentage_count"
        android:textColor="@color/app_white"
        android:textSize="@dimen/default_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/loaderTitleTv"
        app:layout_constraintTop_toTopOf="parent" />


    <ru.armensarkisyan.veigatestapp.common.ui.custom_views.CustomLoader
        android:id="@+id/customLoader"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:setType="firstStep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loaderTitleTv" />


    <TextView
        android:id="@+id/lottieTitleTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/lottie_animation"
        android:textColor="@color/app_white"
        android:textSize="@dimen/default_16sp"
        app:layout_constraintEnd_toEndOf="@+id/customLoader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customLoader" />

    <FrameLayout
        android:id="@+id/lottieFl"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieTitleTv">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottieAnimationView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation" />
    </FrameLayout>


    <TextView
        android:id="@+id/lottieStartTv"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_blue_button_states"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/start_animation"
        android:textColor="@color/app_white"
        android:textSize="@dimen/default_11sp"
        app:layout_constraintBottom_toTopOf="@+id/lottieStopTv"
        app:layout_constraintStart_toEndOf="@+id/lottieFl"
        app:layout_constraintTop_toTopOf="@+id/lottieFl" />


    <TextView
        android:id="@+id/lottieStopTv"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/bg_blue_button_states"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/stop_animation"
        android:textColor="@color/app_white"
        android:textSize="@dimen/default_11sp"
        app:layout_constraintBottom_toTopOf="@+id/lottieVisibilityTv"
        app:layout_constraintStart_toEndOf="@+id/lottieFl"
        app:layout_constraintTop_toBottomOf="@+id/lottieStartTv" />

    <TextView
        android:id="@+id/lottieVisibilityTv"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/bg_blue_button_states"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:text="@string/hide_show_animation"
        android:textColor="@color/app_white"
        android:textSize="@dimen/default_11sp"
        app:layout_constraintBottom_toBottomOf="@+id/lottieFl"
        app:layout_constraintStart_toEndOf="@+id/lottieFl"
        app:layout_constraintTop_toBottomOf="@+id/lottieStopTv" />

    <TextView
        android:id="@+id/customAlertTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_blue_button_states"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/show_custom_alert"
        android:textColor="@color/app_white"
        android:textSize="@dimen/default_17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieFl" />


    <TextView
        android:id="@+id/secondStepTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/bg_blue_button_states"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/go_to_second_screen"
        android:textColor="@color/app_white"
        android:textSize="@dimen/default_17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>